--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,10 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "apexcharts": "3.41.0",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "chance": "1.1.11",
     "formik": "^2.4.4",
+    "html2canvas": "^1.4.1",
     "lodash": "4.17.21",
     "prop-types": "15.8.1",
     "react": "18.2.0",
