--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "formik": "^2.4.4",
     "html2canvas": "^1.4.1",
     "lodash": "4.17.21",
+    "lucide-react": "^0.513.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
