--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@uploadcare/upload-client": "^6.14.3",
     "apexcharts": "3.41.0",
     "axios": "^1.7.9",
     "chance": "1.1.11",
