--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "6.12.1",
     "react-scripts": "5.0.1",
     "react-spring": "9.7.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-toastify": "^9.1.3",
     "react-webcam": "^7.1.1",
     "stylis-plugin-rtl": "2.1.1",
