--- a/frontend/package.json
+++ b/frontend/package.json
@@ -95,5 +95,5 @@
   "overrides": {
     "nth-check": "2.1.1"
   },
-  "proxy": "http://localhost:5000/"
+  "proxy": "https://ai-proctored-system.onrender.com"
 }
